--- a/src/styles/ui/sidebar.scss
+++ b/src/styles/ui/sidebar.scss
@@ -80,6 +80,6 @@
     .sidebar{
         min-width: 72px;
         width: 72px !important;
-        height: 72px !important;
+        height: 71px !important;
     }
 }
